加入函式.call和.apply說明

--- a/讀書筆記/犀牛書/犀牛書 筆記_第八章 (函式).md
+++ b/讀書筆記/犀牛書/犀牛書 筆記_第八章 (函式).md
@@ -153,6 +153,37 @@ Object.prototype.toString.call(o).slice(8,-1);
 
 call() 方法會用它自己的引數列作為傳給函式的引數，而 apply() 方法則預期一組值組成的陣列來做引數之用。
 
+##### 方法.call(object, arg1, arg2, ..)
+
+object 就是 function scope 這個物件。
+
+```Javascript
+function text (x, y, z) {
+	console.log(this.a + x + y + z); 
+}
+
+text.call({ a: 100 }, 1, 2, 3); //106
+```
+
+
+
+##### 方法.apply(object, [e1, e2, ...])
+
+object 就是 function scope 這個物件。
+
+```Javascript
+function text (x, y, z) {
+	console.log(this.a + x + y + z); 
+}
+
+text.call({ a: 100 }, [1, 2, 3]); //106
+```
+
+
+
+> call() 跟 apply() 差別只在後面要帶入方法的參數的方式：
+> call要一個一個給；apply用陣列給
+
 ### 【函式引數與參數】
 
 JavaScript 函式的定義並無指定函式參數的預期型別，而函式調用也不會對傳入的引數值做任何型別檢查，事實上，JavaScript 函式調用甚至不檢查傳入的引數個數。
